nohup.out

> andrewhermann@1.0.0 serve
> serve -s build -l 5000 ^N frontend.log 2^N^F1 ^N

 ERROR  Please provide one path argument at maximum
***REMOVED***/backend/server.js:180
    }
    ^

SyntaxError: Unexpected token '}'
    at internalCompileFunction (node:internal/vm:76:18)
    at wrapSafe (node:internal/modules/cjs/loader:1283:20)
    at Module._compile (node:internal/modules/cjs/loader:1328:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1422:10)
    at Module.load (node:internal/modules/cjs/loader:1203:32)
    at Module._load (node:internal/modules/cjs/loader:1019:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:128:12)
    at node:internal/main/run_main_module:28:49

Node.js v18.20.8
